@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Fix STATUS_NOTIFY so that it appears in the right window. (caf)
+
 * Improve handling of padding in status formats. (caf)
 
 * Use system setenv() in preference to compat bsd_setenv(). (caf)
